--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
 
     <div class="menu-section" id="appetizers">
       <h2>Appetizers</h2>
-      <img src="images/appetizers.png" alt="Appetizers" />
+      <img src="appetizers.png" alt="Appetizers" />
     </div>
 
     <div class="menu-section" id="catch">
       <h2>Your Catch, Your Style</h2>
-      <img src="images/catch-your-style.png" alt="Your Catch, Your Style" />
+      <img src="catch-your-style.png" alt="Your Catch, Your Style" />
     </div>
 
     <div class="menu-section" id="chef">
       <h2>Chef’s Special</h2>
-      <img src="images/chef-style.png" alt="Chef’s Special" />
+      <img src="chef-style.png" alt="Chef’s Special" />
     </div>
 
     <div class="menu-section" id="sides">
       <h2>Side Orders</h2>
-      <img src="images/side-orders.png" alt="Side Orders" />
+      <img src="side-orders.png" alt="Side Orders" />
     </div>
   </body>
 </html>
