--- a/index.html
+++ b/index.html
@@ -1,84 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Port Said Menu</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f8f8f8;
-      }
-      header {
-        background-color: #333;
-        color: white;
-        text-align: center;
-        padding: 20px;
-      }
-      nav {
-        background: #444;
-        padding: 10px;
-        text-align: center;
-      }
-      nav a {
-        color: white;
-        margin: 0 10px;
-        text-decoration: none;
-      }
-      nav a:hover {
-        text-decoration: underline;
-      }
-      .menu-section {
-        max-width: 1000px;
-        margin: 20px auto;
-        padding: 20px;
-      }
-      .menu-section img {
-        width: 100%;
-        max-width: 900px;
-        margin: 10px auto;
-        border-radius: 10px;
-        display: block;
-      }
-      h2 {
-        text-align: center;
-        margin-bottom: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>Port Said Restaurant</h1>
-      <p>Welcome! Tap a category below</p>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Port Said Menu</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f8f8f8;
+    }
+    header {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+    nav {
+      background: #444;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 10px;
+      text-decoration: none;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .menu-section {
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+    .menu-section img {
+      width: 100%;
+      display: block;
+      margin: 0; /* remove margin */
+      padding: 0; /* remove padding */
+      border: none;
+    }
+    h2 {
+      text-align: center;
+      margin: 20px 0 10px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Port Said Restaurant</h1>
+    <p>Welcome! Tap a category below</p>
+  </header>
 
-    <nav>
-      <a href="#appetizers">Appetizers</a>
-      <a href="#catch">Your Catch, Your Style</a>
-      <a href="#chef">Chef’s Special</a>
-      <a href="#sides">Side Orders</a>
-    </nav>
+  <nav>
+    <a href="#appetizers">Appetizers</a>
+    <a href="#catch">Your Catch, Your Style</a>
+    <a href="#chef">Chef’s Special</a>
+    <a href="#sides">Side Orders</a>
+  </nav>
 
-    <div class="menu-section" id="appetizers">
-      <h2>Appetizers</h2>
-      <img src="appetizers.png" alt="Appetizers" />
-    </div>
+  <div class="menu-section" id="appetizers">
+    <h2>Appetizers</h2>
+    <img src="appetizers.png" alt="Appetizers" />
+  </div>
 
-    <div class="menu-section" id="catch">
-      <h2>Your Catch, Your Style</h2>
-      <img src="catch-your-style.png" alt="Your Catch, Your Style" />
-    </div>
+  <div class="menu-section" id="catch">
+    <h2>Your Catch, Your Style</h2>
+    <img src="catch-your-style.png" alt="Your Catch, Your Style" />
+  </div>
 
-    <div class="menu-section" id="chef">
-      <h2>Chef’s Special</h2>
-      <img src="chef-style.png" alt="Chef’s Special" />
-    </div>
+  <div class="menu-section" id="chef">
+    <h2>Chef’s Special</h2>
+    <img src="chef-style.png" alt="Chef’s Special" />
+  </div>
 
-    <div class="menu-section" id="sides">
-      <h2>Side Orders</h2>
-      <img src="side-orders.png" alt="Side Orders" />
-    </div>
-  </body>
+  <div class="menu-section" id="sides">
+    <h2>Side Orders</h2>
+    <img src="side-orders.png" alt="Side Orders" />
+  </div>
+</body>
 </html>
