--- a/index.html
+++ b/index.html
@@ -10,32 +10,7 @@
       padding: 0;
       background-color: #f8f8f8;
     }
-    header {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      font-family: Arial, sans-serif;
-    }
-    nav {
-      background: #444;
-      padding: 10px;
-      text-align: center;
-    }
-    nav a {
-      color: white;
-      margin: 0 10px;
-      text-decoration: none;
-      font-family: Arial, sans-serif;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .menu-section {
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-    .menu-section img {
+    img {
       width: 100%;
       display: block;
       margin: 0;
@@ -45,31 +20,11 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>Port Said Restaurant</h1>
-  </header>
 
-  <nav>
-    <a href="#appetizers">Appetizers</a>
-    <a href="#catch">Your Catch, Your Style</a>
-    <a href="#chef">Chef’s Special</a>
-    <a href="#sides">Side Orders</a>
-  </nav>
+  <img src="appetizers.png" alt="Appetizers" />
+  <img src="catch-your-style.png" alt="Your Catch, Your Style" />
+  <img src="chef-style.png" alt="Chef’s Special" />
+  <img src="side-orders.png" alt="Side Orders" />
 
-  <div class="menu-section" id="appetizers">
-    <img src="appetizers.png" alt="Appetizers" />
-  </div>
-
-  <div class="menu-section" id="catch">
-    <img src="catch-your-style.png" alt="Your Catch, Your Style" />
-  </div>
-
-  <div class="menu-section" id="chef">
-    <img src="chef-style.png" alt="Chef’s Special" />
-  </div>
-
-  <div class="menu-section" id="sides">
-    <img src="side-orders.png" alt="Side Orders" />
-  </div>
 </body>
 </html>
