--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 </head>
 <body>
 
-  <img src="appetizers.png" alt="Appetizers" />
-  <img src="catch-your-style.png" alt="Your Catch, Your Style" />
-  <img src="chef-style.png" alt="Chef’s Special" />
-  <img src="side-orders.png" alt="Side Orders" />
+  <img src="mainpage.jpg" alt="Main Info / Style" />
+  <img src="chef.jpg" alt="Chef’s Special" />
+  <img src="side.jpg" alt="Appetizers and Side Orders" />
 
 </body>
 </html>
