--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-  <img src="mainpage.jpg" alt="Main Info / Style" />
+  <img src="infopage.jpg" alt="Main Info / Style" />
   <img src="chef.jpg" alt="Chef’s Special" />
   <img src="side.jpg" alt="Appetizers and Side Orders" />
 
