--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
       border: none;
     }
   </style>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RZCQC0HQQ7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-RZCQC0HQQ7');
+  </script>
 </head>
 <body>
 
