--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 </head>
 <body>
 
-  <img src="infopage.jpg" alt="Main Info / Style" />
-  <img src="chef.jpg" alt="Chef’s Special" />
-  <img src="side.jpg" alt="Appetizers and Side Orders" />
+  <img src="fishmarket.jpg" alt="Fish Market Style Info" />
+  <img src="Special.jpg" alt="Chef’s Special Menu" />
+  <img src="2ndspecial.jpg" alt="Full Menu Layout" />
 
 </body>
 </html>
