--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 
-  <img src="first.jpg" alt="1st Page Style Info" />
+  <img src="mainp.jpg" alt="Main Page" />
   <img src="Special.jpg" alt="Chef’s Special Menu" />
   <img src="2ndspecial.jpg" alt="Full Menu Layout" />
 
