Update images in index.html

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 <body>
 
   <img src="mainp.jpg" alt="Main Page" />
-  <img src="Special.jpg" alt="Chef’s Special Menu" />
   <img src="2ndspecial.jpg" alt="Full Menu Layout" />
+  <img src="pricelist.jpg" alt="Chef’s Special Menu" />
 
 </body>
 </html>
+
